--- a/landing.html
+++ b/landing.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <style>/* Global Styles */
+    <style>
 
         * {
             box-sizing: border-box;
